--- a/Forms/Static/yes.html
+++ b/Forms/Static/yes.html
@@ -4,6 +4,13 @@
     <title>form Demo</title>
   </head>
   <body>
-
+    <form action="/">
+      Whats your name<input type="text" name="name"/><br>
+      Whats your favorite color<input type="text" name="color"/><br>
+      Enter your password<input type="password" name="firstName"/><br>
+      Do you liek Olive Graden<input type="checkbox" name="oliveGarden"/><br>
+      Select a radio station<input type="radio" name="station"/><br>
+      <button>Submit</button>
+    </form>
   </body>
 </html>
