--- a/Forms/Static/yes.html
+++ b/Forms/Static/yes.html
@@ -4,7 +4,7 @@
     <title>form Demo</title>
   </head>
   <body>
-    <form action="/">
+    <form action="/submission">
       Whats your name<input type="text" name="name"/><br>
       Whats your favorite color<input type="text" name="color"/><br>
       Enter your password<input type="password" name="firstName"/><br>
