--- a/Forms/Static/yes.html
+++ b/Forms/Static/yes.html
@@ -4,19 +4,13 @@
     <title>form Demo</title>
   </head>
   <body>
-<<<<<<< HEAD
-
-
-
-=======
     <form action="/submission">
       Whats your name<input type="text" name="name"/><br>
       Whats your favorite color<input type="text" name="color"/><br>
       Enter your password<input type="password" name="firstName"/><br>
-      Do you liek Olive Graden<input type="checkbox" name="oliveGarden"/><br>
-      Select a radio station<input type="radio" name="station"/><br>
+      Do you like Olive Garden<input type="checkbox" name="oliveGarden"/><br>
+      Do you like radio stations<input type="radio" name="station"/><br>
       <button>Submit</button>
     </form>
->>>>>>> 39b23f6a61c72aa6b7fece3461ed4d936a45adc3
   </body>
 </html>
