--- a/Forms/Static/yes.html
+++ b/Forms/Static/yes.html
@@ -5,12 +5,17 @@
   </head>
   <body>
     <form action="/submission">
-      Whats your name<input type="text" name="name"/><br>
-      Whats your favorite color<input type="text" name="color"/><br>
-      Enter your password<input type="password" name="firstName"/><br>
-      Do you like Olive Garden<input type="checkbox" name="oliveGarden"/><br>
-      Do you like radio stations<input type="radio" name="station"/><br>
+      Whats your name <input type="text" name="name"/><br><br>
+      Whats your favorite color <input type="text" name="color"/><br><br>
+      Enter your password <input type="password" name="firstName"/><br><br>
+      Do you like Olive Graden <input type="checkbox" name="oliveGarden"/><br><br>
+      Select a radio station <input type="radio" name="station"/><br><br>
       <button>Submit</button>
+    </form>
+    <form action="/login">
+      Username <input type="text" name="username"/><br><br>
+      Password <input type="password" name="password"/><br><br>
+      <button>Login</button>
     </form>
   </body>
 </html>
