Put a image in, rendered it, and allowed the user to put in his name

--- a/Forms/Static/yes.html
+++ b/Forms/Static/yes.html
@@ -12,7 +12,7 @@
       Select a radio station <input type="radio" name="station"/><br><br>
       <button>Submit</button>
     </form>
-    <form action="/login">
+    <form action="/login" method="post">
       Username <input type="text" name="username"/><br><br>
       Password <input type="password" name="password"/><br><br>
       <button>Login</button>
