--- a/finalProj/soullfoodstartuppage.html
+++ b/finalProj/soullfoodstartuppage.html
@@ -4,7 +4,14 @@
     <title>Soullfoods</title>
   </head>
   <body>
-    <h1></h1>
-
+    <form action="/action_page">
+      Mood <input type="text" name="Mood"/><br><br>
+      Weather <input type="text" name="Weather"/><br><br>
+      Genre <input type="text" name="Genre"/><br><br>
+      <input type="submit" value="Submit">
+    </form>
+    <h1>Music-The Ultimate food for the Soul</h1>
+    <img src="2-chainz-trap-house.jpg" alt="2 Chainz">
+    <img src="jazzmusician.jpg" alt="Jazz Player">
   </body>
 </html>
