--- a/Forms/Static/youtubeapi.html
+++ b/Forms/Static/youtubeapi.html
@@ -18,7 +18,7 @@
         player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'M7lc1UVf-VE',
+          videoId: 'zLkmzzcAEvo',
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
@@ -37,7 +37,7 @@
       var done = false;
       function onPlayerStateChange(event) {
         if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
+          setTimeout(stopVideo, 10000);
           done = true;
         }
       }
