--- a/finalProj/soullfoodstartuppage.html
+++ b/finalProj/soullfoodstartuppage.html
@@ -13,5 +13,6 @@
     <h1>Music-The Ultimate food for the Soul</h1>
     <img src="2-chainz-trap-house.jpg" alt="2 Chainz">
     <img src="jazzmusician.jpg" alt="Jazz Player">
+    <img src="soulfood.png" alt= "food">
   </body>
 </html>
