Ericka's changes to project.

--- a/Forms/Static/soullfoodstartuppage.html
+++ b/Forms/Static/soullfoodstartuppage.html
@@ -3,6 +3,7 @@
     <title>Soullfoods</title>
   </head>
   <body>
+
     <h1>Food for the Soul</h1>
     <form action="/action_page">
       Mood <input type="text" name="Mood"/><br><br>
@@ -58,5 +59,6 @@
     </form>
     <img src="2-chainz-trap-house.jpg" alt="2 Chainz">
     <img src="jazzmusician.jpg" alt="Jazz Player">
+   </style>
   </body>
 </html>
