--- a/finalProj/static/soullfoodstartuppage.html
+++ b/finalProj/static/soullfoodstartuppage.html
@@ -59,6 +59,11 @@
     </form>
     <img src="2-chainz-trap-house.jpg" alt="2 Chainz">
     <img src="jazzmusician.jpg" alt="Jazz Player">
-   </style>
+
+    <style>
+   body {
+     background-color: brown;
+   }
+    </style>
   </body>
 </html>
