--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -56,7 +56,32 @@
             }
           </script>
     </form>
+
+   <div class="picture" >
+
     <img src="2-chainz-trap-house.jpg" alt="2 Chainz">
+
+   </div>
+
+   <div class="picture2" >
+
     <img src="jazzmusician.jpg" alt="Jazz Player">
+
+  </div>
+
+
+   <style>
+     .picture {
+      position: relative;
+      width: 900px;
+     }
+     .picture img {
+      position: absolute;
+      left: 700px;
+     }
+     body {
+     background-color: brown;
+   }
+    </style>
   </body>
 </html>
