--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -1,17 +1,20 @@
 <html>
   <head>
     <title>Soullfoods</title>
+    <link rel="stylesheet" href="soulfoodoutput.css">
   </head>
   <body>
     <h1>Food for the Soul</h1>
     <form action="/action_page">
-      Mood <input type="text" name="Mood"/><br><br>
-      Weather <input type="text" name="Weather"/><br><br>
-      Genre <input type="text" name="Genre"/><br><br>
-      Explicit Content <input type="radio" name="station"/><br>
-      <br><input type="submit" value="Submit"><br>
-          <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-          <br><div id="player"></div><br>
+      <p> Mood </p><input type="text" name="Mood"/ >
+      <p> Weather</p> <input type="text" name="Weather"/>
+       <p>Genre </p><input type="text" name="Genre"/>
+       <p>Explicit Content </p><input type="radio" name="station"/>
+        <input type="submit" value="Submit">
+            <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+            <div id="player"></div>
+
+
 
           <script>
             // 2. This code loads the IFrame Player API code asynchronously.
