--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Food for the Soul</h1>
-    <form action="/action_page">
+    <form action="/spotify">
       Mood <input type="text" name="Mood"/><br><br>
       Weather <input type="text" name="Weather"/><br><br>
       Genre <input type="text" name="Genre"/><br><br>
