--- a/finalProj/static/soullfoodstartuppage.html
+++ b/finalProj/static/soullfoodstartuppage.html
@@ -5,7 +5,7 @@
   <body>
 
     <h1>Food for the Soul</h1>
-    <form action="/action_page">
+    <form action="/leek">
       Mood <input type="text" name="Mood"/><br><br>
       Weather <input type="text" name="Weather"/><br><br>
       Genre <input type="text" name="Genre"/><br><br>
