--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -6,13 +6,14 @@
   <body>
     <h1>Food for the Soul</h1>
     <form action="/action_page">
-      <p> Mood </p><input type="text" name="Mood"/ >
-      <p> Weather</p> <input type="text" name="Weather"/>
-       <p>Genre </p><input type="text" name="Genre"/>
-       <p>Explicit Content </p><input type="radio" name="station"/>
-        <input type="submit" value="Submit">
+      <p> Mood <input type="text" name="Mood"/>
+          Weather <input type="text" name="Weather"/>
+         Genre <input type="text" name="Genre"/>
+         Explicit Content <input type="radio" name="station"/></p>
+         <button type="button">Submit</button>  <br><br><br>
             <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
             <div id="player"></div>
+
 
 
 
@@ -92,6 +93,7 @@
      }
      body {
      background-color: brown;
+
    }
     </style>
   </body>
