--- a/finalProj/static/soullfoodstartuppage.html
+++ b/finalProj/static/soullfoodstartuppage.html
@@ -6,9 +6,9 @@
 
     <h1>Food for the Soul</h1>
     <form action="/action_page">
-      Mood <input type="text" name="Mood"/><br><br>
+      Mood <input type="text" name="Mood"/>
       Weather <input type="text" name="Weather"/><br><br>
-      Genre <input type="text" name="Genre"/><br><br>
+      Genre <input type="text" name="Genre"/>
       Explicit Content <input type="radio" name="station"/><br>
       <br><input type="submit" value="Submit"><br>
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
