--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>Food for the Soul</h1>
-<<<<<<< HEAD
+    <img id= "soullfood" src="Picture2.png" alt="soull">
+
+
     <form action="/spotify">
       <html>
       <head>
@@ -69,7 +71,6 @@
       <br><input type="submit" value="Submit"><br>
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
           <br><div id="player"></div><br>
-=======
     <form action="/action_page">
       <p> Mood <input type="text" name="Mood"/>
           Weather <input type="text" name="Weather"/>
@@ -79,8 +80,6 @@
             <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
             <div id="player"></div>
 
-
->>>>>>> dafe3375ec2eabb553fae1b272d50bc83e35377f
 
 
           <script>
@@ -105,6 +104,8 @@
                 }
                });
             }
+
+
 
             // 4. The API will call this function when the video player is ready.
             function onPlayerReady(event) {
@@ -141,26 +142,8 @@
 
    <div class="picture3" >
 
-    <img src="soulfood1.png" alt="soull">
 
    </div>
 
-
-
-
-   <style>
-     .picture {
-      position: relative;
-      width: 900px;
-     }
-     .picture img {
-      position: absolute;
-      left: 700px;
-     }
-     body {
-     background-color: brown;
-
-   }
-    </style>
   </body>
 </html>
