--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -5,82 +5,33 @@
   </head>
   <body>
     <h1>Food for the Soul</h1>
-<<<<<<< HEAD
-    <form action="/spotify">
-      <html>
-      <head>
-      <style>
-      .dropbtn {
-          background-color: #4CAF50;
-          color: white;
-          padding: 16px;
-          font-size: 16px;
-          border: none;
-          cursor: pointer;
-      }
 
-      .dropdown {
-          position: relative;
+      <style>
+      a:link, a:visited {
+          background-color: blue;
+          color: white;
+          padding: 14px 25px;
+          text-align: center;
+          text-decoration: none;
           display: inline-block;
       }
 
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
-      }
-
-      .dropdown-content a {
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-      }
-
-      .dropdown-content a:hover {background-color: #f1f1f1}
-
-      .dropdown:hover .dropdown-content {
-          display: block;
-      }
-
-      .dropdown:hover .dropbtn {
-          background-color: #3e8e41;
+      a:hover, a:active {
+          background-color: grey;
       }
       </style>
-      </head>
-      <body>
-
-      <h2>Dropdown Menu</h2>
 
 
-      <div class="dropdown">
-        <button class="dropbtn">Weather</button>
-        <div class="dropdown-content">
-          <a href="#">Cold</a>
-          <a href="https://www.youtube.com/watch?v=vxa-RHeOc0w">Hot</a>
-          <a href="#">Muggy</a>
-        </div>
-      </div>
+
+      <a href="default.asp" target="_blank">Angry</a><form action="/spotify">
+
+
+
 
       Explicit Content <input type="radio" name="station"/><br>
-      <br><input type="submit" value="Submit"><br>
+
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
           <br><div id="player"></div><br>
-=======
-    <form action="/action_page">
-      <p> Mood <input type="text" name="Mood"/>
-          Weather <input type="text" name="Weather"/>
-         Genre <input type="text" name="Genre"/>
-         Explicit Content <input type="radio" name="station"/></p>
-         <button type="button">Submit</button>  <br><br><br>
-            <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-            <div id="player"></div>
-
-
->>>>>>> dafe3375ec2eabb553fae1b272d50bc83e35377f
 
 
           <script>
