--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -14,7 +14,7 @@
       <style>
       .dropbtn {
           background-color: #4CAF50;
-          color: white;
+          color: grey;
           padding: 16px;
           font-size: 16px;
           border: none;
