--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Food for the Soul</h1>
-    <img id= "soullfood" src="Picture2.png" alt="soull">
+    <img src="Picture2.png" alt="soull">
 
 
     <form action="/spotify">
@@ -14,7 +14,7 @@
       <style>
       .dropbtn {
           background-color: #4CAF50;
-          color: grey;
+          color: white;
           padding: 16px;
           font-size: 16px;
           border: none;
@@ -26,20 +26,49 @@
           display: inline-block;
       }
 
-      a:hover, a:active {
-          background-color: grey;
+      .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+      }
+
+      .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+      }
+
+      .dropdown-content a:hover {background-color: #f1f1f1}
+
+      .dropdown:hover .dropdown-content {
+          display: block;
+      }
+
+      .dropdown:hover .dropbtn {
+          background-color: #3e8e41;
       }
       </style>
+      </head>
+      <body>
+
+      <h2>Dropdown Menu</h2>
 
 
-
-      <a href="default.asp" target="_blank">Angry</a><form action="/spotify">
-
-
-
+      <div class="dropdown">
+        <button class="dropbtn">Weather</button>
+        <div class="dropdown-content">
+          <a href="#">Cold</a>
+          <a href="https://www.youtube.com/watch?v=vxa-RHeOc0w">Hot</a>
+          <a href="#">Muggy</a>
+        </div>
+      </div>
 
       Explicit Content <input type="radio" name="station"/><br>
-
+      <br><input type="submit" value="Submit"><br>
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
           <br><div id="player"></div><br>
     <form action="/action_page">
@@ -75,8 +104,6 @@
                 }
                });
             }
-
-
 
             // 4. The API will call this function when the video player is ready.
             function onPlayerReady(event) {
