--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -8,8 +8,14 @@
 {{track_name}}
 
 
+<h2>New Albums</h2>
 
-
-
+<ul>
+  <li>Dj Khaled, Grateful</li>
+  <li>Rich The Kid, Rich Forever 3</li>
+  <li>PnB Rock, Goin Thru the Motions</li>
+  <li>Nav, Nav</li>
+  <li>Migos, Culture</li>
+</ul>
   </body>
 </html>
