--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Food for the Soul</h1>
-    <img src="Picture2.png" alt="soull">
+    <img src="Picture2.png" height="430"width"430" alt="soull">
 
 
     <form action="/spotify">
@@ -13,7 +13,7 @@
       <head>
       <style>
       .dropbtn {
-          background-color: #4CAF50;
+          background-color: black;
           color: white;
           padding: 16px;
           font-size: 16px;
@@ -55,28 +55,69 @@
       </head>
       <body>
 
-      <h2>Dropdown Menu</h2>
+
 
 
       <div class="dropdown">
-        <button class="dropbtn">Weather</button>
+        <button class="dropbtn">Excited</button>
         <div class="dropdown-content">
-          <a href="#">Cold</a>
-          <a href="https://www.youtube.com/watch?v=vxa-RHeOc0w">Hot</a>
-          <a href="#">Muggy</a>
         </div>
       </div>
 
-      Explicit Content <input type="radio" name="station"/><br>
+      <div class="dropdown">
+        <button class="dropbtn">Livid</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Gloomy</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Jubilant</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Cheerful</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Heated</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Sad</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Happy</button>
+        <div class="dropdown-content">
+        </div>
+      </div>
+
+
+
+      <h1>Explicit Content <label class="switch">
+<input type="checkbox">
+<span class="slider round"></span>
+</label>
+        
       <br><input type="submit" value="Submit"><br>
           <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
           <br><div id="player"></div><br>
     <form action="/action_page">
-      <p> Mood <input type="text" name="Mood"/>
-          Weather <input type="text" name="Weather"/>
-         Genre <input type="text" name="Genre"/>
-         Explicit Content <input type="radio" name="station"/></p>
-         <button type="button">Submit</button>  <br><br><br>
+
             <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
             <div id="player"></div>
 
