--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>soullfood</title>
+  <style>
+  table, th, td {
+      border: 1px solid black;
+      padding: 5px;
+  }
+  table {
+      border-spacing: 15px;
+  }
+  </style>
   </head>
   <body>
 {{artist_name}}
 {{track_name}}
+<h1>Food For Thought</h1>
+<table style="width:100%">
+  <tr>
+    <th><h2>Artist</h2></th>
+    <th><h2>Albums</h2></th>
+    <th><h2>Songs</h2></th>
+  </tr>
+  <tr>
+    <td>Migos</td>
+    <td>Culture</td>
+    <td>Bad and Boujee</td>
+  </tr>
+  <tr>
+    <td>XXXTENTACION</td>
+    <td>Revenge</td>
+    <td>Look At Me</td>
+  </tr>
+  <tr>
+    <td>Rich The Kid</td>
+    <td>Rich Forever 3</td>
+    <td>Rich Forever Way Outro</td>
+  </tr>
+  <tr>
+    <td>Travi$ Scott</td>
+    <td>Rodeo</td>
+    <td>Nightcrawler</td>
+  </tr>
+  <tr>
+    <td>Post Malone</td>
+    <td>Stoney</td>
+    <td>Congratulations</td>
+  </tr>
+</table>
 
 
 
 
-
-  </body>
+ </body>
 </html>
