--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -3,7 +3,7 @@
   <head>
   <style>
   table, th, td {
-      border: 1px solid black;
+      border: 1px solid red;
       padding: 5px;
   }
   table {
@@ -46,12 +46,7 @@
     <td>Stoney</td>
     <td>Congratulations</td>
   </tr>
-</table>
-
-
-
-
-
-  </body>
+ </table>
+</body>
 
 </html>
