--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -122,7 +122,7 @@
   <div id="player"></div>
 
 
-
+          <h1>Suggested Song<h1>
           <script>
             // 2. This code loads the IFrame Player API code asynchronously.
             var tag = document.createElement('script');
@@ -136,8 +136,8 @@
             var player;
             function onYouTubeIframeAPIReady() {
               player = new YT.Player('player', {
-                height: '240',
-                width: '240',
+                height: '500',
+                width: '700',
                 videoId: 'wFspktAAziU',
                 events: {
                   'onReady': onPlayerReady,
