--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -9,6 +9,21 @@
   table {
       border-spacing: 15px;
   }
+body {
+    background-color: black;
+}
+
+body {
+    color: white;
+}
+
+h1 {
+    color: #00ff00;
+}
+
+p.ex {
+    color: rgb(0,0,255);
+}
   </style>
   </head>
   <body>
@@ -47,6 +62,12 @@
     <td>Congratulations</td>
   </tr>
  </table>
+
+ <img src="../static/MigosCulture.jpg"  style="width:304px;height:228px;">
+ <img src="../static/Post-Malone-Stoney-album-cover.jpg"  style="width:304px;height:228px;">
+ <img src="../static/Revenge.jpg"  style="width:304px;height:228px;">
+ <img src="../static/rich forever 3.jpg"  style="width:304px;height:228px;">
+ <img src="../static/rodeo.jpg"  style="width:304px;height:228px;">
 </body>
 
 </html>
