--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -52,6 +52,20 @@
       .dropdown:hover .dropbtn {
           background-color: #3e8e41;
       }
+      body {
+    background-color: black;
+}
+      body {
+    color: red;
+}
+
+      h1 {
+color: white;
+}
+
+      p.ex {
+color: white;
+}
       </style>
       </head>
       <body>
@@ -123,7 +137,7 @@
             <div id="player"></div>
 
 
-          <h1>Suggested Song<h1>
+          <h1><font color="#856659">Suggested Song</font><h1>
           <script>
             // 2. This code loads the IFrame Player API code asynchronously.
             var tag = document.createElement('script');
