--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -14,22 +14,22 @@ body {
 }
 
 body {
-    color: white;
+    color: #E65B28;
 }
 
 h1 {
-    color: #00ff00;
+    color: #E65B28;
 }
 
 p.ex {
-    color: rgb(0,0,255);
+    color: #E65B28;
 }
   </style>
   </head>
   <body>
 {{artist_name}}
 {{track_name}}
-<h1>Food For Thought</h1>
+<h1 align="center">Food For Thought</h1>
 <table style="width:100%">
   <tr>
     <th><h2>Artist</h2></th>
