--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -50,7 +50,7 @@
       }
 
       .dropdown:hover .dropbtn {
-          background-color: #3e8e41;
+          background-color: red;
       }
       </style>
       </head>
@@ -60,53 +60,58 @@
 
 
       <div class="dropdown">
-        <button class="dropbtn">Excited</button>
+        <input type="submit" class="dropbtn" value="Excited" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Livid</button>
+        <input type ="submit" class="dropbtn" value="Livid" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Gloomy</button>
+        <input type ="submit" class="dropbtn" value="Gloomy" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Jubilant</button>
+        <input type ="submit" class="dropbtn" value="Trappy" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Cheerful</button>
+        <input type ="submit" class="dropbtn" value="Cheerful" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Heated</button>
+        <input type ="submit" class="dropbtn" value="Heated" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Sad</button>
+        <input type ="submit" class="dropbtn" value="Sad" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <button class="dropbtn">Happy</button>
+        <input  type ="submit" class="dropbtn" value="Happy" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
+      <div class="dropdown">
+        <input type = "submit"  class="dropbtn" value="Feeling Frisky" name = "mood">
+        <div class="dropdown-content">
+        </div>
+      </div>
 
 
       <h1>Explicit Content <label class="switch">
