--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="soulfoodoutput.css">
   </head>
   <body>
-
-    <h1>Food for the Soul</h1>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <h1><font color="#E65B28">Food for the Soul</font></h1>
     <img src="Picture2.png" height="430"width"430" alt="soull">
 
 
@@ -61,6 +61,8 @@
 
       h1 {
 color: white;
+font-size: 350%;
+font-family: 'Lobster', cursive;
 }
 
       p.ex {
@@ -128,7 +130,7 @@ color: white;
       </div>
 
 
-      <h1>Explicit Content <label class="switch">
+      <h1><font color="#E65B28">Explicit Content</font><label class="switch">
 <input type="checkbox">
 <span class="slider round"></span>
 </label>
@@ -142,7 +144,7 @@ color: white;
             <div id="player"></div>
 
 
-          <h1><font color="#856659">Suggested Song</font><h1>
+
           <script>
             // 2. This code loads the IFrame Player API code asynchronously.
             var tag = document.createElement('script');
