--- a/finalProj/static/soullfoodtemplate.html
+++ b/finalProj/static/soullfoodtemplate.html
@@ -24,12 +24,22 @@ h1 {
 p.ex {
     color: #E65B28;
 }
-  </style>
+
+h1 {
+    font-size: 500%;
+    font-family: 'Lobster', cursive;
+}
+
+
+    </style>
   </head>
   <body>
 {{artist_name}}
 {{track_name}}
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
 <h1 align="center">Food For Thought</h1>
+
 <table style="width:100%">
   <tr>
     <th><h2>Artist</h2></th>
