--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -73,11 +73,11 @@ color: white;
 
 
 
-      <div class="dropdown">
+      <!-- <div class="dropdown">
         <input type="submit" class="dropbtn" value="Excited" name = "mood">
         <div class="dropdown-content">
         </div>
-      </div>
+      </div> -->
 
       <div class="dropdown">
         <input type ="submit" class="dropbtn" value="Livid" name = "mood">
@@ -98,13 +98,13 @@ color: white;
       </div>
 
       <div class="dropdown">
-        <input type ="submit" class="dropbtn" value="Cheerful" name = "mood">
+        <input type ="submit" class="dropbtn" value="Chill" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
 
       <div class="dropdown">
-        <input type ="submit" class="dropbtn" value="Heated" name = "mood">
+        <input type ="submit" class="dropbtn" value="Cheerful" name = "mood">
         <div class="dropdown-content">
         </div>
       </div>
@@ -115,11 +115,11 @@ color: white;
         </div>
       </div>
 
-      <div class="dropdown">
+      <!-- <div class="dropdown">
         <input  type ="submit" class="dropbtn" value="Happy" name = "mood">
         <div class="dropdown-content">
         </div>
-      </div>
+      </div> -->
 
       <div class="dropdown">
         <input type = "submit"  class="dropbtn" value="Feeling Frisky" name = "mood">
