--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="soulfoodoutput.css">
   </head>
   <body>
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <h1><font color="#E65B28">Food for the Soul</font></h1>
-    <img src="Picture2.png" height="430"width"430" alt="soull">
 
+    <h1><font color="#E65B28">Food for the Soul</font></h1>
+    <img src="Picture2.png" height="430"width"430" alt="soull" align="center">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
     <form action="/spotify">
       <html>
@@ -68,6 +68,12 @@ font-family: 'Lobster', cursive;
       p.ex {
 color: white;
 }
+
+      h2 {
+        color: red;
+        font-size: 250%;
+      }
+
       </style>
       </head>
       <body>
@@ -130,7 +136,7 @@ color: white;
       </div>
 
 
-      <h1><font color="#E65B28">Explicit Content</font><label class="switch">
+
 <input type="checkbox">
 <span class="slider round"></span>
 </label>
@@ -160,7 +166,7 @@ color: white;
               player = new YT.Player('player', {
                 height: '500',
                 width: '700',
-                videoId: 'wFspktAAziU',
+                videoId: '',
                 events: {
                   'onReady': onPlayerReady,
                   'onStateChange': onPlayerStateChange
