--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -6,7 +6,7 @@
   <body>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <h1><font color="#E65B28">Food for the Soul</font></h1>
-    <img src="Picture2.png" height="430"width"430" alt="soull">
+    <img src="Picture2.png" height="430"width"430" alt="soull" id="sfood">
 
 
     <form action="/spotify">
@@ -160,7 +160,7 @@ color: white;
               player = new YT.Player('player', {
                 height: '500',
                 width: '700',
-                videoId: 'wFspktAAziU',
+                videoId: 'dNE3-P8HjSU',
                 events: {
                   'onReady': onPlayerReady,
                   'onStateChange': onPlayerStateChange
