--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -5,14 +5,22 @@
   </head>
   <body>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <h1><font color="#E65B28">Food for the Soul</font></h1>
-    <img src="Picture2.png" height="430"width"430" alt="soull" id="sfood">
+    <h1><font color="#E65B28">Food for the Soul</font></h1><br><br>
+
+    <br><img src="Picture2.png" height="530"width"530" alt="soull" id="sfood">
 
 
     <form action="/spotify">
       <html>
       <head>
       <style>
+
+      h1 {
+        text-align: center;
+    border-style: dotted;
+    border-color: red;
+}
+
       .dropbtn {
           background-color: black;
           color: white;
@@ -201,14 +209,9 @@ color: white;
 
    </div>
 
-   <div class="picture2" >
+    <div class="picture2" >
 
-    <img src="jazzmusician.jpg" alt="Jazz Player">
-
-   </div>
-
-   <div class="picture3" >
-
+    <img src="liluzivert.jpg" alt="concert" style="width100spx;height:328px" >
 
    </div>
 
