--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -160,7 +160,7 @@ color: white;
               player = new YT.Player('player', {
                 height: '500',
                 width: '700',
-                videoId: 'VAwWdK7b2zE',
+                videoId: 'R1h9bcrC6Q8',
                 events: {
                   'onReady': onPlayerReady,
                   'onStateChange': onPlayerStateChange
