--- a/finalProj/static/jarenssoullfoodstartup.html
+++ b/finalProj/static/jarenssoullfoodstartup.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <h1><font color="#E65B28">Food for the Soul</font></h1><br><br>
 
-    <br><img src="Picture2.png" height="530"width"530" alt="soull" id="sfood">
+    <br><img src="Picture2.png" height="500" width="530" alt="soull" id="sfood">
 
 
     <form action="/spotify">
